--- a/Lesson_01.ipynb
+++ b/Lesson_01.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Course Information\n",
-    "Introduction to Programming (INFO-233)<br>Ramapo College of New Jersey<br>Spring 2022<br>\n",
+    "* Introduction to Programming (INFO-233)\n",
+    "* Ramapo College of New Jersey\n",
+    "* Professor Samuel Jacobs\n",
     "\n",
     "# Lesson 01 Topics\n",
     "* Purpose of INFO-233\n",
@@ -14,7 +16,6 @@
     "* Python Variables & Types \n",
     "\n",
     "# Purpose of INFO-233\n",
-    "\n",
     "The purpose of this course is to provide a practical understanding of computer programming using the [Python](https://www.python.org/) language.\n",
     "\n",
     "# What is a Computer?\n",
@@ -32,6 +33,7 @@
     "Before we write a program, it is helpful to understand the concept of a _function_. Functions accept input(s), perform computation, and produce output(s). The middle step (perform computation) can be as simple or complex as required. Functions are the primary mechanism which strips away the complexities of computer electronics for the computer programmer. It is not necessary to consider how computer electronics physically display text on a screen; the programmer simply needs to call the ```print()``` function.\n",
     "\n",
     "Python contains a [standard library](https://docs.python.org/3/library/index.html) of pre-built [functions](https://docs.python.org/3/library/functions.html) for common tasks. There are many third-party libraries of functions for more specific tasks.\n",
+    "\n",
     "* [SciPy](https://www.scipy.org/) for scientific computing\n",
     "* [TensorFlow](https://www.tensorflow.org/) for machine learning\n",
     "* [OpenCV](https://opencv.org/) for computer vision\n",
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
        "7"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +178,7 @@
        "2.5"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +205,7 @@
        "17.9375"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
        "4.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
        "256"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +353,7 @@
        "164.87212707001282"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +386,7 @@
        "0.19634954084936207"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +416,7 @@
        "7"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
