--- a/Lesson_01.ipynb
+++ b/Lesson_01.ipynb
@@ -8,6 +8,7 @@
     "* Introduction to Programming (INFO-233)\n",
     "* Ramapo College of New Jersey\n",
     "* Professor Samuel Jacobs\n",
+    "* Spring 2022 Semester\n",
     "\n",
     "# Lesson 01 Topics\n",
     "* Purpose of INFO-233\n",
@@ -19,15 +20,12 @@
     "The purpose of this course is to provide a practical understanding of computer programming using the [Python](https://www.python.org/) language.\n",
     "\n",
     "# What is a Computer?\n",
-    "Computers are a set of hardware necessary to perform and store results of calculations, much like the human mind. The difference is that computers can perform and store _billions_ of calculations per second!\n",
+    "A computers is a set of hardware necessary to perform and store results of calculations, much like the human mind. One main advantage of computers is that they can perform and store _billions_ of calculations per second!\n",
     "\n",
     "## Abstracting the Electronics\n",
-    "Modern computing was born with the invention of the [transistor](https://en.wikipedia.org/wiki/Transistor) in 1947 at Bell Labs in New Jersey. Fundamentally, a computer controls the flow of electricity between locations and uses electricty to charge or dischage _storage elements_. A storage element acts like a light bulb; it is either ON (1) or OFF (0). At a higher level, combinations (_\"encoding\"_) of these storage elements can be used to represent every type of data.\n",
+    "Modern computing was born with the invention of the [transistor](https://en.wikipedia.org/wiki/Transistor) in 1947 at Bell Labs in New Jersey. Fundamentally, a computer controls the flow of electricity between locations and uses electricty to charge or dischage _storage elements_. A storage element acts like a light bulb; it occupies either an ON (1) or OFF (0) state. Combinations (_encoding_) of these storage elements can be used to represent every type of data.\n",
     "\n",
-    "The study of computer electronics is vast, and a working knowledge of it is generally not required for computer programming, so it may be considered out of scope for this course. Similar to how an automobile driver can perform their function without knowing the inner workings of an engine or transmission, programming a computer does not require a thorough knowledge of the electronics.\n",
-    "\n",
-    "## Memory Model\n",
-    "At the most fundamental level, computers manipulate registers. While incredibly fascinating, the electrical engineering aspects of computation are not the focus of most programmers  \n",
+    "The study of digital (computer) electronics is vast, and a working knowledge of it, while useful for low-level languages, is not required for Python programming so it will be considered out of scope for this course. Similar to how an automobile driver can perform their function without knowing the inner workings of an engine or transmission, programming a computer does not require a thorough knowledge of the corresponding hardware.\n",
     "\n",
     "# Python Basics\n",
     "Before we write a program, it is helpful to understand the concept of a _function_. Functions accept input(s), perform computation, and produce output(s). The middle step (perform computation) can be as simple or complex as required. Functions are the primary mechanism which strips away the complexities of computer electronics for the computer programmer. It is not necessary to consider how computer electronics physically display text on a screen; the programmer simply needs to call the ```print()``` function.\n",
@@ -37,11 +35,12 @@
     "* [SciPy](https://www.scipy.org/) for scientific computing\n",
     "* [TensorFlow](https://www.tensorflow.org/) for machine learning\n",
     "* [OpenCV](https://opencv.org/) for computer vision\n",
+    "* A list of ~20 popular third-party Python libraries may be found [here](https://www.upgrad.com/blog/libraries-in-python-explained/).\n",
     "\n",
     "## The ```print()``` Function\n",
     "The [```print()```](https://docs.python.org/3/library/functions.html#print) function accepts one (or more) arguments and prints text to the console.\n",
     "\n",
-    "## Cliché First Program: Hello World!\n",
+    "### Cliché First Program: Hello World!\n",
     "Most programming tutorials start with this simple, one-line program to display the text \"Hello World!\". In Python, the ```print()``` function allows this to be done in several different ways."
    ]
   },
@@ -49,15 +48,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Hello World!')"
    ]
@@ -66,15 +57,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Hello', 'World!')"
    ]
@@ -83,15 +66,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H e l l o   W o r l d !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('H', 'e', 'l', 'l', 'o', ' ', 'W', 'o', 'r', 'l', 'd', '!')"
    ]
@@ -135,7 +110,7 @@
    "metadata": {},
    "source": [
     "## Mathematical Operators\n",
-    "Python can peform every function that can be found on a standard or scientific calculator (and more).\n",
+    "Python can peform every function available on a standard or scientific calculator (and more).\n",
     "\n",
     "#### Addition (+)"
    ]
@@ -272,13 +247,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Math + ```print()```\n",
-    "The ```print()``` function can process non-text input such as numbers or mathematical expressions. "
+    "#### Modular Division (%)\n",
+    "Remember long division? Modular division is similar. It returns the remainder of division between two numbers."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5%2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the divisor is held fixed (6), and the dividend incrementally increased (5...6...7), the remainder will begin a repeating pattern."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5%6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6%6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7%6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Math + ```print()```\n",
+    "The ```print()``` function can process non-text input such as numbers and mathematical expressions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -314,92 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced Math\n",
-    "Core Python has relatively little functionality. Supplementary libraries can easily be added to programs using the ```import``` command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After the previous line of code, every function stored in the math library is now accessible. Suppose an application requires computing continually compounded interest according to the common formula,\n",
-    "\n",
-    "$$\n",
-    "A = Pe^{rt},\n",
-    "$$\n",
-    "\n",
-    "where **A** is current value, **P** is interest, **r** is rate, **t** is time, and **e** is a mathematical constant (2.718281828459045...). Instead of manually typing a value for e, which can be error-prone, we can use the ```exp()``` function in the ```math``` library.\n",
-    "\n",
-    "Suppose we wish to find the current value of a $100 principal investment with an interest rate of 5\\% annually after 10 years."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "164.87212707001282"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "100*math.exp(0.05*10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now suppose we wish to find the area of a circle with a diameter of 0.5 inches according to the formula,\n",
-    "\n",
-    "$$\n",
-    "A=\\frac{\\pi D^{2}}{4},\n",
-    "$$\n",
-    "\n",
-    "where **A** is area, **D** is diameter, and **$\\pi$** is the mathematical constant (3.141592653589793...)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.19634954084936207"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.25*math.pi*0.5**2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using Python to evaluate mathematical expressions is useful, but if a program requires accessing values multiple times, it can become error-prone. _Variables_ exist for this very reason!\n",
+    "In the background, Python performs the mathematical operation then _casts_ the number into text. Casting is a process which converts data from one type to another.\n",
     "\n",
     "## Comments\n",
     "Python uses the pound symbol (```\\#```) to denote that the remainder of a line of code is a _comment_, or text that the Python interpreter will ignore. Comments are useful for annotating code, explaining _why_ code is written in a particular way."
@@ -407,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +401,7 @@
        "7"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,26 +415,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Advanced Math\n",
+    "Core Python has relatively little specialized functionality. Supplementary libraries can easily be added to programs using the ```import``` command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the previous line of code, every function stored in the math library is now accessible. Suppose an application requires computing continually compounded interest according to the formula,\n",
+    "\n",
+    "$$\n",
+    "A = Pe^{rt},\n",
+    "$$\n",
+    "\n",
+    "where **A** is current value, **P** is interest, **r** is rate, **t** is time, and **e** is a mathematical constant (2.718281828459045...). Instead of manually typing a value for e, which can be error-prone, we can use the ```exp()``` function in the ```math``` library.\n",
+    "\n",
+    "Suppose we wish to find the current value of a $100 principal investment with an interest rate of 5\\% annually after 10 years."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164.87212707001282"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100*math.exp(0.05*10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that ```math.exp()``` was used instead of simply ```exp()```. Unlike ```print()```, ```exp()``` is part of the ```math``` library. By adopting the syntax ```libraryName.functionName()```, Python ensures that functions located in separate libraries, with the same name, do not conflict.\n",
+    "\n",
+    "Now suppose we wish to find the area of a circle with a diameter of 0.5 inches according to the formula,\n",
+    "\n",
+    "$$\n",
+    "A=\\frac{\\pi D^{2}}{4},\n",
+    "$$\n",
+    "\n",
+    "where **A** is area, **D** is diameter, and **$\\pi$** is the mathematical constant (3.141592653589793...)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19634954084936207"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.25*math.pi*0.5**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Python to evaluate mathematical expressions by _hard coding_ values (directly typing 0.25, 0.5, etc.) is useful at first, but this becomes error-prone for anything but simple programs. It is best practice to use _variables_, which may be referenced and modified throughout a program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python Variables & Types\n",
     "## The Assignment Operator\n",
-    "Python uses the _assignment operator_ (```=```) to store data in a _variable_. The assignment operator divides the lefthand side (LHS) from righthand side (RHS) of a Python assignment statement,\n",
+    "Python uses the _assignment operator_ (```=```) to store data in a _variable_. The assignment operator divides the lefthand side (LHS) of a Python assignment statement from its righthand side (RHS),\n",
     "\n",
     "$$\n",
     "LHS = RHS,\n",
     "$$\n",
     "\n",
-    "but this is functionally different from a mathematical equality which looks identical. In an assignment statement, the LHS contains **exclusively** the name of a variable, and the RHS contains any valid Python expression that returns some form of savable data.\n",
+    "but this is functionally different from a mathematical equality which looks identical. In an assignment statement, the LHS contains **exclusively** the name of a variable, and the RHS contains any valid Python expression.\n",
     "\n",
     "$$\n",
     "Variable = Some\\ Python\\ Expression.\n",
     "$$\n",
     "\n",
-    "Variables can be named anything as long as it starts with a letter (no special characters or numbers). It is best practice to name variables something memorable based on the data they store."
+    "Variables can be named anything as long as it starts with a letter (no special characters or numbers). It is best practice to name variables something memorable based on the data they store.\n",
+    "\n",
+    "Let's revisit the previous compounding interest calculator but using variables instead of hard-coding values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -514,16 +595,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Using variables makes programs easier to understand and modify for future use.\n",
+    "\n",
     "## Data Types\n",
-    "Standard Python contains data types for logic, numbers, and text.\n",
+    "Standard Python contains built-in data types for logic, numbers, and text.\n",
     "\n",
     "### Logic\n",
-    "Boolean values accept one of two states. In computer programming, this is most-often applied to truthfulness (true/false). Python has keywords specifically for these states: ```True``` and ```False```."
+    "Boolean values accept one of two states. In computer programming, this paradigm is most-often applied to truthfulness (true/false). Python has keywords specifically for these states: ```True``` and ```False```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -607,12 +690,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complex numbers are also available by default. Their application is generally limited to scientific programming ([context](https://en.wikipedia.org/wiki/Complex_number))."
+    "Complex numbers are also available by default. Their application is most-applicable to scientific programming ([context](https://en.wikipedia.org/wiki/Complex_number))."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
