Added integer division. Fixed grammar issue. Removed 3rd party link.

--- a/Lesson_01.ipynb
+++ b/Lesson_01.ipynb
@@ -20,12 +20,12 @@
     "The purpose of this course is to provide a practical understanding of computer programming using the [Python](https://www.python.org/) language.\n",
     "\n",
     "# What is a Computer?\n",
-    "A computers is a set of hardware necessary to perform and store results of calculations, much like the human mind. One main advantage of computers is that they can perform and store _billions_ of calculations per second!\n",
+    "A computer is a set of hardware necessary to perform and store results of calculations, much like the human mind. One main advantage of computers is that they can perform and store _billions_ of calculations per second!\n",
     "\n",
     "## Abstracting the Electronics\n",
     "Modern computing was born with the invention of the [transistor](https://en.wikipedia.org/wiki/Transistor) in 1947 at Bell Labs in New Jersey. Fundamentally, a computer controls the flow of electricity between locations and uses electricty to charge or dischage _storage elements_. A storage element acts like a light bulb; it occupies either an ON (1) or OFF (0) state. Combinations (_encoding_) of these storage elements can be used to represent every type of data.\n",
     "\n",
-    "The study of digital (computer) electronics is vast, and a working knowledge of it, while useful for low-level languages, is not required for Python programming so it will be considered out of scope for this course. Similar to how an automobile driver can perform their function without knowing the inner workings of an engine or transmission, programming a computer does not require a thorough knowledge of the corresponding hardware.\n",
+    "The study of digital (computer) electronics is vast, and a working knowledge of it, while useful for low-level languages, is not required for Python programming so it will be considered out of scope for this course. Similar to how an automobile driver can perform their function without knowing the inner workings of an engine or transmission, programming a computer does not require a thorough understanding of the corresponding hardware.\n",
     "\n",
     "# Python Basics\n",
     "Before we write a program, it is helpful to understand the concept of a _function_. Functions accept input(s), perform computation, and produce output(s). The middle step (perform computation) can be as simple or complex as required. Functions are the primary mechanism which strips away the complexities of computer electronics for the computer programmer. It is not necessary to consider how computer electronics physically display text on a screen; the programmer simply needs to call the ```print()``` function.\n",
@@ -35,7 +35,8 @@
     "* [SciPy](https://www.scipy.org/) for scientific computing\n",
     "* [TensorFlow](https://www.tensorflow.org/) for machine learning\n",
     "* [OpenCV](https://opencv.org/) for computer vision\n",
-    "* A list of ~20 popular third-party Python libraries may be found [here](https://www.upgrad.com/blog/libraries-in-python-explained/).\n",
+    "* [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/) for scraping HTML and XML webpages.\n",
+    "* Dozens of others...\n",
     "\n",
     "## The ```print()``` Function\n",
     "The [```print()```](https://docs.python.org/3/library/functions.html#print) function accepts one (or more) arguments and prints text to the console.\n",
@@ -48,7 +49,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello World!')"
    ]
@@ -57,7 +66,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello', 'World!')"
    ]
@@ -66,7 +83,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H e l l o   W o r l d !\n"
+     ]
+    }
+   ],
    "source": [
     "print('H', 'e', 'l', 'l', 'o', ' ', 'W', 'o', 'r', 'l', 'd', '!')"
    ]
@@ -220,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exponentiation (**)"
+    "#### Integer Division (//)"
    ]
   },
   {
@@ -231,10 +256,37 @@
     {
      "data": {
       "text/plain": [
-       "256"
+       "6"
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "13//2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exponentiation (**)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +314,7 @@
        "1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +341,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +361,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +381,7 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +453,7 @@
        "7"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +506,7 @@
        "164.87212707001282"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +541,7 @@
        "0.19634954084936207"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +787,13 @@
    ],
    "source": [
     "print(type('Test Type?'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strings will be examined further during future lessons."
    ]
   }
  ],
