Added license information.

--- a/Lesson_01.ipynb
+++ b/Lesson_01.ipynb
@@ -8,7 +8,7 @@
     "* Introduction to Programming (INFO-233)\n",
     "* Ramapo College of New Jersey\n",
     "* Professor Samuel Jacobs\n",
-    "* Spring 2022 Semester\n",
+    "* Notes Licensed Under [CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/)\n",
     "\n",
     "# Lesson 01 Topics\n",
     "* Purpose of INFO-233\n",
